--- a/index.html
+++ b/index.html
@@ -111,5 +111,76 @@
         </div>
         </div>
     </section>
+    <section class="demain" id="03">
+        <h2>Les domaines d'utilisation</h2>
+        <div class="p1">
+            <h3>MR in eduction</h3>
+            <div class="learn">
+                <div class="img">
+                    <img src="./img/domain/1.jpg">
+                    <p>Les élèves peuvent voir des sites historiques et des attractions naturelles virtuellement à travers des lunettes sans quitter la salle de classe</p>
+                </div>
+                <div class="img">
+                    <img src="./img/domain/2.jpg">
+                    <p>Les étudiants peuvent améliorer leur éducation en interagissant avec des objets numériques et en explorant un espace virtuel.</p>
+                </div>
+                <div class="img">
+                    <img src="./img/domain/3.jpg">
+                    <p>Ils peuvent également créer des modèles numériques et expérimenter le design en trois dimensions, donnant vie à leurs idées sur les structures, les objets et les œuvres d'art.</p>
+                </div>
+                <div class="img">
+                    <img src="./img/domain/5.jpg">
+                    <p>Pour les étudiants en médecine, ils peuvent bénéficier de l'apprentissage de l'anatomie et des techniques chirurgicales via la réalité mixte, ce qui leur permet de pratiquer leurs compétences chirurgicales et d'améliorer leur préparation aux situations d'urgence</p>
+                </div>
+                <div class="img">
+                    <img src="./img/domain/4.jpg">
+                    <p> Ils peuvent voir à l'intérieur d'un patient sans effectuer de procédures chirurgicales.</p>
+                </div>
+                <div class="img">
+                    <img src="./img/domain/6.jpg">
+                    <p>Des modèles en 3D des systèmes corporels sont présentés aux étudiants pour qu'ils puissent voir et apprendre sur chaque système dans un environnement virtuel.</p>
+                </div>
+        </div>
+        <div class="p1">
+            <h3>le domaine des jeux</h3>
+            <div class="learn">
+                <div class="img">
+                    <img src="img/domain/7.jpg">
+                    <p>
+                        la technologie de la réalité mixte sera utilisée pour reconnaître les objets de manière incroyable. 
+                    </p>
+                </div>
+                <div class="img">
+                    <img src="img/domain/8.jpg">
+                    <p>
+                        les jeux pourront détecter les éléments dans une pièce et créer une zone de jeu unique
+                    </p>
+                </div>
+                <div class="img">
+                    <img src="img/domain/7.jpg">
+                    <p>
+                        Rien ne pourrait exciter davantage un joueur passionné que d'être transporté dans le jeu, de combattre des extraterrestres et des démons, et d'explorer des environnements incroyables au-delà de l'imagination
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="p1">
+            <h3>le monde professionnel</h3>
+            <div class="learn">
+                <div class="img">
+                    <img src="img/domain/10.jpg">
+                    <p>La MR est révélée être un outil inestimable dans l'industrie de la construction et de l'architecture, notamment dans les domaines de l'architecture, de l'ingénierie, de la construction, de l'exploitation minière, et bien plus encore</p>
+                </div>
+                <div class="img">
+                    <img src="img/domain/11.jpg">
+                    <p>Vous pouvez utiliser la MR pour l'examen de la conception, le contrôle de la qualité, l'inspection du site ou la formation à la sécurité. En définissant vos objectifs et vos cas d'utilisation,</p>
+                </div>
+                <div class="img">
+                    <img src="img/domain/12.jpg">
+                    <p> vous pouvez affiner vos options et sélectionner les appareils, plates-formes et applications MR les plus adaptés à vos besoins.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
